# wxserver

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  wxserver.c  wxserver.h  wxsignal.c  wxsignal.h  wxsrv.c  wxsrv.h
tests/: testmaster.c  testserver.c  testworker.c  wxmaster.c  wxserver.c
